// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GlobalLanguageSelector Rendering should render dropdown variant correctly 1`] = `
<div>
  <div
    class="space-y-1"
  >
    <div
      class="text-xs font-medium text-gray-500 px-2 mb-1 flex items-center"
    >
      Language
    </div>
    <button
      class="
              flex items-center w-full px-2 py-1.5 text-sm text-left transition-colors rounded
              bg-blue-50 text-blue-700 font-medium
              
            "
    >
      <span
        class="mr-2"
      >
        🇬🇧
      </span>
      <span>
        English
      </span>
    </button>
    <button
      class="
              flex items-center w-full px-2 py-1.5 text-sm text-left transition-colors rounded
              text-gray-900 hover:bg-gray-50
              
            "
    >
      <span
        class="mr-2"
      >
        🇩🇪
      </span>
      <span>
        Deutsch
      </span>
    </button>
    <button
      class="
              flex items-center w-full px-2 py-1.5 text-sm text-left transition-colors rounded
              text-gray-900 hover:bg-gray-50
              
            "
    >
      <span
        class="mr-2"
      >
        🇫🇷
      </span>
      <span>
        Français
      </span>
    </button>
    <button
      class="
              flex items-center w-full px-2 py-1.5 text-sm text-left transition-colors rounded
              text-gray-900 hover:bg-gray-50
              
            "
    >
      <span
        class="mr-2"
      >
        🇪🇸
      </span>
      <span>
        Español
      </span>
    </button>
    <button
      class="
              flex items-center w-full px-2 py-1.5 text-sm text-left transition-colors rounded
              text-gray-900 hover:bg-gray-50
              
            "
    >
      <span
        class="mr-2"
      >
        🇵🇱
      </span>
      <span>
        Polski
      </span>
    </button>
    <button
      class="
              flex items-center w-full px-2 py-1.5 text-sm text-left transition-colors rounded
              text-gray-900 hover:bg-gray-50
              
            "
    >
      <span
        class="mr-2"
      >
        🇨🇭
      </span>
      <span>
        Baseldytsch
      </span>
    </button>
  </div>
</div>
`;

exports[`GlobalLanguageSelector Rendering should render sidebar variant correctly 1`] = `
<div>
  <div
    class="relative group"
  >
    <button
      class="flex items-center w-full py-2 px-4 rounded hover:bg-gray-700 text-gray-300 hover:text-white transition-colors"
      title="Change Language"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-globe mr-2 h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20"
        />
        <path
          d="M2 12h20"
        />
      </svg>
      <span
        class="text-sm"
      >
        🇬🇧
         
        English
      </span>
    </button>
    <div
      class="absolute bottom-full left-0 mb-2 w-full bg-gray-700 rounded-lg shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200 z-50"
    >
      <button
        class="
              flex items-center w-full px-4 py-2 text-sm text-left transition-colors first:rounded-t-lg last:rounded-b-lg
              bg-blue-600 text-white
              
            "
      >
        <span
          class="mr-2"
        >
          🇬🇧
        </span>
        <span>
          English
        </span>
      </button>
      <button
        class="
              flex items-center w-full px-4 py-2 text-sm text-left transition-colors first:rounded-t-lg last:rounded-b-lg
              text-gray-300 hover:bg-gray-600 hover:text-white
              
            "
      >
        <span
          class="mr-2"
        >
          🇩🇪
        </span>
        <span>
          Deutsch
        </span>
      </button>
      <button
        class="
              flex items-center w-full px-4 py-2 text-sm text-left transition-colors first:rounded-t-lg last:rounded-b-lg
              text-gray-300 hover:bg-gray-600 hover:text-white
              
            "
      >
        <span
          class="mr-2"
        >
          🇫🇷
        </span>
        <span>
          Français
        </span>
      </button>
      <button
        class="
              flex items-center w-full px-4 py-2 text-sm text-left transition-colors first:rounded-t-lg last:rounded-b-lg
              text-gray-300 hover:bg-gray-600 hover:text-white
              
            "
      >
        <span
          class="mr-2"
        >
          🇪🇸
        </span>
        <span>
          Español
        </span>
      </button>
      <button
        class="
              flex items-center w-full px-4 py-2 text-sm text-left transition-colors first:rounded-t-lg last:rounded-b-lg
              text-gray-300 hover:bg-gray-600 hover:text-white
              
            "
      >
        <span
          class="mr-2"
        >
          🇵🇱
        </span>
        <span>
          Polski
        </span>
      </button>
      <button
        class="
              flex items-center w-full px-4 py-2 text-sm text-left transition-colors first:rounded-t-lg last:rounded-b-lg
              text-gray-300 hover:bg-gray-600 hover:text-white
              
            "
      >
        <span
          class="mr-2"
        >
          🇨🇭
        </span>
        <span>
          Baseldytsch
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`GlobalLanguageSelector Rendering should render topbar variant correctly 1`] = `
<div>
  <div
    class="relative"
  >
    <button
      class="flex items-center space-x-1.5 px-3 py-2 rounded-lg hover:bg-gray-100 transition-colors"
      disabled=""
      title="Change Language"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-loader-circle h-4 w-4 text-gray-600 animate-spin"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 12a9 9 0 1 1-6.219-8.56"
        />
      </svg>
      <span
        class="text-sm font-medium text-gray-700 hidden md:inline"
      >
        🇬🇧
      </span>
    </button>
  </div>
</div>
`;
